--- a/app/views/pruegel_entity/edit.html.erb
+++ b/app/views/pruegel_entity/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', verbindung_news_path(@news) %> |
-<%= link_to 'Back', verbindung_news_index_path %>
+<%= link_to 'Zurèck', verbindung_news_index_path %>
