--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Guten Tag <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Es wurde eine Änderung des Passwords angefordert. Sie können das Passwort mit untenstehendem Link ändern:</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Wenn Sie die Änderung nicht angefordert haben, so ignorieren Sie diese Mail</p>
+<p>Ihr Passwort wird nicht geändert, solange Sie nicht den obenstehenden Link betätigen.</p>
