--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,82 +18,150 @@
 
   	<%= stylesheet_link_tag    "application" %>
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-46149208-1', 'iuvenes.ch');
+	  ga('send', 'pageview');
+
+	</script>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
+  <div class="container">
 
-      <nav class="top-bar">
+    <!--<div class="contain-to-grid">-->
+      <nav class="top-bar" data-options="back_text: Zurück">
+        <div class="noppel_1"></div>
         <ul class="title-area">
-          <li class="name">
-            <h1><a href="#">IUVENES!
-              <% if user_signed_in? then %>
-                  - <%= if current_user.verbindung then current_user.verbindung.name end%>
-              <% end %>
-            </a>
-            </h1>
+          <li class="name show-for-small">
+            <% if user_signed_in? then %>
+                <a href=" <%= verbindung_path(current_user.verbindung) %>" class="no_background">
+                    <div class="verbindung_logo_xsmall show-for-small" style="background-image: url(<%= current_user.verbindung.logo.url(:small)%>)"></div>
+                </a>
+            <% end %>
+
+            <% if user_signed_in? then %>
+              <div class="verbindung_colors_small hide-for-medium-up">
+                  <div class="first_color" style="background-color: <%= current_user.verbindung.first_color%>"></div>
+                  <div class="second_color" style="background-color: <%= current_user.verbindung.second_color%>"></div>
+                  <div class="third_color" style="background-color: <%= current_user.verbindung.third_color%>"></div>
+              </div>
+            <% end %>
+
           </li>
+          <% if user_signed_in? then %>
+            <li><div class="verbindung_logo_small show-for-medium" style="background-image: url(<%= current_user.verbindung.logo.url(:small)%>)"></div></li>
+              <li><div class="verbindung_logo_medium show-for-large-up" style="background-image: url(<%= current_user.verbindung.logo.url(:medium)%>)"></div></li>
+          <% end %>
+          <li class="toggle-topbar menu-icon"><a href="#">
+            <span>Menu</span></a></li>
         </ul>
         <section class="top-bar-section">
-          <ul class="center">
             <% if user_signed_in? then %>
-                <li class="divider"></li>
-                <li><%= link_to "News", verbindung_news_index_path(current_user.verbindung) %> </li>
-                <li class="divider"></li>
-                <li><%= link_to "Anlässe", verbindung_events_path(current_user.verbindung) %></li>
-                <li class="divider"></li>
-                <li><%= link_to "Kanten", verbindung_kants_path(current_user.verbindung) %></li>
-                <li class="divider"></li>
-                <li><%= link_to "Biercomment", verbindung_biercomments_path(current_user.verbindung) %></li>
-                <li class="divider"></li>
-                <li><%= link_to "Statuten", verbindung_paragraphs_path(current_user.verbindung) %></li>
+              <ul class="left">
+                <li class="has-dropdown"><a href="<%= verbindung_path(current_user.verbindung)%>"><%= current_user.verbindung.name %></a>
+                  <ul class="dropdown">
+                    <li class="<%= controller.class == NewsController ? 'active' : ''%>"><%= link_to "News", verbindung_news_index_path(current_user.verbindung, :page => 1) %> </li>
+                    <li class="<%= controller.class == EventsController ? 'active' : ''%>"><%= link_to "Anlässe", verbindung_events_path(current_user.verbindung) %></li>
+                  </ul>
+                </li>
+
+                <li class="has-dropdown"><a href="#">Prügel</a>
+                  <ul class="dropdown">
+                    <li class="<%= controller.class == KantsController ? 'active' : ''%>"><%= link_to "Kanten", verbindung_kants_path(current_user.verbindung, :page => 1) %></li>
+                    <li class="<%= controller.class == BiercommentsController ? 'active' : ''%>"><%= link_to "Biercomment", verbindung_biercomments_path(current_user.verbindung, :page => 1) %></li>
+                    <li class="<%= controller.class == ParagraphsController ? 'active' : ''%>"><%= link_to "Statuten", verbindung_paragraphs_path(current_user.verbindung, :page => 1) %></li>
+                  </ul>
+                </li>
+
+              </ul>
             <% end %>
-          </ul>
+
           <ul class="right">
+            <div class="noppel_2 hide-for-small"></div>
+
+
+
             <% if user_signed_in? then %>
-                <% if (current_user.admin? || current_user.root?) %>
-                    <li class="has-dropdown"><a href="#">Administaration</a>
+                <div class="verbindung_colors hide-for-small">
+                  <div class="first_color" style="background-color: <%= current_user.verbindung.first_color%>"></div>
+                  <div class="second_color" style="background-color: <%= current_user.verbindung.second_color%>"></div>
+                  <div class="third_color" style="background-color: <%= current_user.verbindung.third_color%>"></div>
 
-                      <ul class="dropdown">
-                        <% if current_user.root? then %>
-                            <li><%= link_to "Verbindungen", verbindungs_path %></li>
-                        <%end%>
+                </div>
 
-                        <% if current_user.admin? || current_user.root? then %>
-                            <li><%= link_to "Benutzer", users_path %></li>
-                        <% end %>
+                <li class="has-dropdown">
+                  <% if current_user.verbindung.get_unapproved_members.count > 0%>
+                      <div class="hide-for-small settings_coloring">&nbsp;</div>
+                  <% end %>
+                  <div class="settings no_background hide-for-small">&nbsp;</div>
+                  <a class="show-for-small" href="#">Einstellungen</a>
+                  <ul class="dropdown">
+                    <% if (current_user.admin? || current_user.root? || !Rails.env.production?) %>
+                        <li class="has-dropdown"><a href="#">Administaration <%= if current_user.verbindung.get_unapproved_members.count > 0 then '('+current_user.verbindung.get_unapproved_members.count.to_s+')' end %></a>
 
-                        <% if !Rails.env.production? %>
-                            <li class="divider"></li>
+                          <ul class="dropdown">
+                            <% if current_user.root? then %>
+                                <li><%= link_to "Verbindungen", verbindungs_path %></li>
+                            <%end%>
 
-                            <li><%= link_to((if current_user.admin? then "ADMIN" else "NOT ADMIN" end), toggle_admin_path) %></li>
-                            <li><%= link_to((if current_user.root? then "ROOT" else "NOT ROOT" end), toggle_root_path) %></li>
-                        <% end %>
-                      </ul>
-                    </li>
-                <% end %>
+                            <% if current_user.admin? || current_user.root? then %>
+                                <li><%= link_to ("Benutzer" + if current_user.verbindung.get_unapproved_members.count > 0 then ' ('+current_user.verbindung.get_unapproved_members.count.to_s+')' else '' end), users_path %></li>
+                            <% end %>
 
-                <li class="divider"></li>
-                <li><%= link_to "Profil", current_user %> </li>
-                <li class="divider"></li>
-                <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-            <% else %>
-                <li class="divider"></li>
+                            <% if !Rails.env.production? %>
+
+                                <li><%= link_to((if current_user.admin? then "ADMIN" else "NOT ADMIN" end), toggle_admin_path) %></li>
+                                <li><%= link_to((if current_user.root? then "ROOT" else "NOT ROOT" end), toggle_root_path) %></li>
+                            <% end %>
+                          </ul>
+                        </li>
+                    <% end %>
+
+                    <li><%= link_to "Profil", current_user %> </li>
+                    <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+                  </ul>
+                </li>
+          <% else %>
                 <li><%= link_to "Einloggen", new_user_session_path %> </li>
-                <li class="divider"></li>
                 <li><%= link_to "Registrieren", new_user_registration_path %></li>
             <% end %>
           </ul>
         </section>
       </nav>
+    <!--</div>-->
 
+    <div class="row main_content">
+      <% if notice || flash[:alert] || flash[:error] then %>
+          <div class="row notice_block">
+            <div class="collumns small-12">
+              <div class="row"><%= notice %></div>
+              <div class="row"><%= flash[:alert] %></div>
+              <div class="row"><%= flash[:error]%></div>
+            </div>
+            <div class="notice_closer">X</div>
+          </div>
+      <% end %>
 
-    <div class="row">
-      <div class="large-centered small-9 collumns ">
+      <div class="large-centered small-12 collumns middle_row">
         <%= yield %>
       </div>
     </div>
-    
+
+    <div class="footer">
+      <div class="footer_container">
+          <div class="noppel_1"></div>
+          <div class="credits">Cedric Reichenbach & Oskar Truffer v/o Pixel scribit</div>
+          <div class="noppel_4"></div>
+      </div>
+        <!--<div class="column footer small-12"></div>-->
+    </div>
+  </div>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
